Fixed z-index issue

--- a/administrator/components/com_stripela/assets/css/stripela.css
+++ b/administrator/components/com_stripela/assets/css/stripela.css
@@ -18,6 +18,10 @@
     font-size: inherit;
 }
 
-.v-application {
-    z-index: 2000;
+.v-dialog__content {
+    z-index: 2001 !important;
+}
+
+.v-overlay {
+    z-index: 2000 !important;
 }
